# spdlog

./: CMakeLists.txt
include/spdlog/fmt/bundled/: format.h
